--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 http = "1.1.0"
 tower = { version = "0.5.0", features = ["util"] }
+utoipa = { version = "4.2.0", features = ["axum_extras"] }
+utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
 
 [dev-dependencies]
 hyper = "1.4.1"
