--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 http = "1.1.0"
 tower = { version = "0.5.0", features = ["util"] }
+tower-http = { version = "0.5.2", features = ["trace"] }
 utoipa = { version = "4.2.0", features = ["axum_extras"] }
 utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
 config = "0.14.0"
